# api/admin-api-spec.yaml
@@ -9,7 +9,7 @@ paths:
       x-swagger-router-controller: deviceController
       operationId: getDeviceInfo
       tags:
-        - Device
+        - Device Info
       description: Returns data for the specified device like it's location and group
       parameters:
         - name: deviceID
@@ -176,7 +176,7 @@ paths:
     post:
       x-swagger-router-controller: countryCodeController
       tags:
-        - Country Codes
+        - Country Codes and Info
       description: Adds a new 'country' with an ID and a country code
       operationId: addNewCountry
       responses:
@@ -190,19 +190,15 @@ paths:
               required:
                 - countryName
                 - code
-                - countryID
               properties:
                 countryName:
                   type: string
                   description: The name of this country eg 'Ireland'
-                countryID:
-                  type: number
-                  description: A numeric ID for a country. Must be unique 
                 code:
                   type: string
                   description: Two character code eg; 'IE', 'FR', 'DE'
         description: >-
-          Adds a measurement for a specific device             
+          Adds a new country and returns it's database ID          
   /addDeviceGroup:
     post:
       x-swagger-router-controller: deviceGroupController
